fixed some times a gap on toc toggle's right

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -84,8 +84,9 @@ body
   align-items: center
   background-color: var(--bgColor)
   pointer-events: auto
-  transition-property: background-color
+  transition-property: background-color,box-shadow
   transition-duration: 0.5s
+  box-shadow: 1px 0 var(--bgColor)
 
 .toc-toggle i
   cursor: pointer
